--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New User</h1>
+<h1>New User Sign-Up</h1>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+<%  %>
+
+
+<%= link_to 'Home page', users_path %>
