created scaffold for prudctinfo and categorie. Add field for adding details of branches. Not updated for products.

--- a/app/views/branchinfos/_form.html.erb
+++ b/app/views/branchinfos/_form.html.erb
@@ -14,6 +14,35 @@
       <%= f.text_field :branchname %>
     </p>
   </div>
+
+  <div>
+    <p><%= f.label :Address %>
+      <br />
+      <%= f.text_field :address %>
+    </p>
+  </div>
+
+  <div>
+    <p><%= f.label :Phoneno %>
+      <br />
+      <%= f.text_field :phoneno %>
+    </p>
+  </div>
+
+  <div>
+    <p><%= f.label :Branchincharge %>
+      <br />
+      <%= f.text_field :branchincharge %>
+    </p>
+  </div>
+
+  <div>
+    <p><%= f.label :Contactno %>
+      <br />
+      <%= f.text_field :contactno %>
+    </p>
+  </div>
+
   <div class="actions">
     <%= f.submit %></div>
 <% end %>
