--- a/app/views/branchinfos/_form.html.erb
+++ b/app/views/branchinfos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([@currentStore, @currentBranch]) do |f| %>
   <% if @currentBranch.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@currentBranch.errors.count, "error")%> prohibited this review from being saved:</h2>
+      <h2><%= pluralize(@currentBranch.errors.count, "error")%> prohibited this branch from being saved:</h2>
       <ul><% @currentBranch.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
