--- a/app/views/productinfos/edit.html.erb
+++ b/app/views/productinfos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Productinfo</h1>
+<h1>Editing Product</h1>
 
-<%= render 'form', productinfo: @productinfo %>
-
-<%= link_to 'Show', @productinfo %> |
-<%= link_to 'Back', productinfos_path %>
+<%= render'form'%>
+<%= link_to'Show', storeinfo_branchinfo_productinfo_path(@currentBranch, @currentProduct) %> |
+<%= link_to'Back', storeinfo_branchinfo_productinfos_path(@currentBranch) %>
