--- a/app/views/productinfos/new.html.erb
+++ b/app/views/productinfos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Productinfo</h1>
+<h1>New Product for <%= @currentBranch.branchname %></h1>
 
-<%= render 'form', productinfo: @productinfo %>
+<%= render'form'%>
 
-<%= link_to 'Back', productinfos_path %>
+<%= link_to'Back', storeinfo_branchinfo_productinfos_path(@currentBranch) %>
