--- a/app/views/productinfos/show.html.erb
+++ b/app/views/productinfos/show.html.erb
@@ -1,34 +1,34 @@
-<p id="notice"><%= notice %></p>
+<h1>Products in <%= @currentBranch.branchname %></h1>
 
 <p>
   <strong>Productname:</strong>
-  <%= @productinfo.productname %>
+  <%= @currentProduct.productname %>
 </p>
 
 <p>
   <strong>Storeproductid:</strong>
-  <%= @productinfo.storeproductid %>
+  <%= @currentProduct.storeproductid %>
 </p>
 
 <p>
   <strong>Productprice:</strong>
-  <%= @productinfo.productprice %>
+  <%= @currentProduct.productprice %>
 </p>
 
 <p>
   <strong>Branchinfo:</strong>
-  <%= @productinfo.branchinfo_id %>
+  <%= @currentProduct.branchinfo_id %>
 </p>
 
 <p>
   <strong>Image:</strong>
-  <%= @productinfo.image %>
+  <%= @currentProduct.image %>
 </p>
 
 <p>
   <strong>Categorie:</strong>
-  <%= @productinfo.categorie_id %>
+  <%= @currentProduct.categorie_id %>
 </p>
 
-<%= link_to 'Edit', edit_productinfo_path(@productinfo) %> |
-<%= link_to 'Back', productinfos_path %>
+<%= link_to'Edit', edit_storeinfo_branchinfo_productinfo_path(@currentBranch, @currentProduct) %> |
+<%= link_to'Back', storeinfo_branchinfo_productinfos_path(@currentBranch) %>
