--- a/app/views/productinfos/edit.html.erb
+++ b/app/views/productinfos/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Product</h1>
 
 <%= render'form'%>
-<%= link_to'Show', storeinfo_branchinfo_productinfo_path(@currentBranch, @currentProduct) %> |
-<%= link_to'Back', storeinfo_branchinfo_productinfos_path(@currentBranch) %>
+<%= link_to'Show', productinfo_path(@productinfo) %> |
+<%= link_to'Back', productinfos_path(@branchinfo) %>
