--- a/app/views/productinfos/show.html.erb
+++ b/app/views/productinfos/show.html.erb
@@ -1,34 +1,31 @@
-<h1>Products in <%= @currentBranch.branchname %></h1>
+
 
 <p>
   <strong>Productname:</strong>
-  <%= @currentProduct.productname %>
+  <%= @productinfo.productname %>
 </p>
 
 <p>
   <strong>Storeproductid:</strong>
-  <%= @currentProduct.storeproductid %>
+  <%= @productinfo.storeproductid %>
 </p>
 
 <p>
   <strong>Productprice:</strong>
-  <%= @currentProduct.productprice %>
+  <%= @productinfo.productprice %>
 </p>
 
 <p>
   <strong>Branchinfo:</strong>
-  <%= @currentProduct.branchinfo_id %>
+  <%= @productinfo.branchinfo_id %>
 </p>
 
 <p>
   <strong>Image:</strong>
-  <%= @currentProduct.image %>
+  <%= @productinfo.image %>
 </p>
 
-<p>
-  <strong>Categorie:</strong>
-  <%= @currentProduct.categorie_id %>
-</p>
-
-<%= link_to'Edit', edit_storeinfo_branchinfo_productinfo_path(@currentBranch, @currentProduct) %> |
-<%= link_to'Back', storeinfo_branchinfo_productinfos_path(@currentBranch) %>
+<%= link_to'Edit', {:controller => "productinfos", :action => "edit",
+                    :productinfo_id => @productinfo.id} %> |
+<%= link_to'Back', {:controller => "productinfos", :action => "index",
+                     :branchinfo_id => @productinfo.branchinfo_id} %>
