--- a/app/views/storeinfos/show.html.erb
+++ b/app/views/storeinfos/show.html.erb
@@ -50,4 +50,4 @@
 
 <%= link_to 'Edit', edit_storeinfo_path(@storeinfo) %> |
 <%= link_to 'Back', storeinfos_path %>
-<%= link_to'Show Branches', storeinfo_branchinfos_path(@storeinfo) %>
+<%= link_to'Show Branches', branchinfos_path(@storeinfo) %>
