--- a/app/views/productinfos/_form.html.erb
+++ b/app/views/productinfos/_form.html.erb
@@ -46,5 +46,9 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %></div>
+    <%= f.submit %>
+    <%= link_to 'Cancel',
+                {:controller => "branchinfos", :action => "index",
+                 :branchinfo_id => @branchinfo.id, :storeinfo_id => @branchinfo.storeinfo_id}%>
+  </div>
 <% end %>
