--- a/app/views/productinfos/index.html.erb
+++ b/app/views/productinfos/index.html.erb
@@ -19,16 +19,18 @@
 
   <% for product in @productList %>
     <tr>
-      <td><%= product.productname %></td>
-      <td><%= product.storeproductid %></td>
-      <td><%= product.productprice %></td>
-      <td><%= product.image %></td>
-      <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
-                              :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
-      <td><%= link_to'Edit', edit_productinfo_path(product) %></td>
-      <td><%= link_to'Destroy', productinfo_path(product),
-                     :confirm =>'Are you sure?',
-                     :method => :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% if current_user.admin? || product.user_id == current_user.id %>
+        <td><%= product.productname %></td>
+        <td><%= product.storeproductid %></td>
+        <td><%= product.productprice %></td>
+        <td><%= product.image %></td>
+        <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
+                                :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
+        <td><%= link_to'Edit', edit_productinfo_path(product) %></td>
+        <td><%= link_to'Destroy', productinfo_path(product),
+                       :confirm =>'Are you sure?',
+                       :method => :delete, data: { confirm: 'Are you sure?' } %></td>
+      <%end %>
     </tr>
   <% end %>
 </table>
