--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#Index</h1>
 <p>Find me in app/views/home/Index.html.erb</p>
+<div>
+  <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+</div>
