--- a/app/views/storeinfos/_form.html.erb
+++ b/app/views/storeinfos/_form.html.erb
@@ -51,6 +51,11 @@
     <%= form.text_field :image %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.hidden_field :user_id, :value => current_user.id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
