--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -10,7 +10,7 @@
       <th>Lastname</th>
       <th>Address</th>
       <th>Phoneno</th>
-      <th>User</th>
+      <th>Email Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,7 +23,7 @@
         <td><%= profile.lastname %></td>
         <td><%= profile.address %></td>
         <td><%= profile.phoneno %></td>
-        <td><%= profile.user_id %></td>
+        <td><%= User.find(profile.user_id).email %></td>
         <td><%= link_to 'Show', profile %></td>
         <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -35,3 +35,4 @@
 <br>
 
 <%= link_to 'New Profile', new_profile_path %>
+<%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
