--- a/app/views/branchinfos/index.html.erb
+++ b/app/views/branchinfos/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th></th>
     <th>Branch details</th>
     <th>Address</th>
     <th>Phone No</th>
@@ -12,6 +13,7 @@
   <% for br in @branchList %>
     <tr>
       <% if current_user.admin? || br.user_id == current_user.id %>
+        <td><%= image_tag(@storeinfo.image_url(:thumb).to_s) %></td>
         <td><%= br.branchname %></td>
         <td><%= br.address %></td>
         <td><%= br.phoneno %></td>
