--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -1,6 +1,7 @@
 <h1>Search for your Product</h1>
 <table>
   <tr>
+    <th></th>
     <th>Product Name</th>
     <th>Store Product Id</th>
     <th>Product Price</th>
@@ -10,13 +11,12 @@
   <% @productList = Productinfo.all %>
   <% for product in @productList %>
     <tr>
-
-        <td><%= product.productname %></td>
-        <td><%= product.storeproductid %></td>
-        <td><%= product.productprice %></td>
-        <td><%= product.image %></td>
-        <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
-                                :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
+      <td><%= image_tag(product.image_url(:thumb).to_s) %></td>
+      <td><%= product.productname %></td>
+      <td><%= product.storeproductid %></td>
+      <td><%= product.productprice %></td>
+      <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
+                              :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
       <% if current_user != nil %>
         <% if current_user.admin? == true || product.user_id == current_user.id  %>
           <% storeid = Branchinfo.find(product.branchinfo_id).storeinfo_id %>
@@ -26,7 +26,7 @@
                          :confirm =>'Are you sure?',
                          :method => :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
-        <% end %>
+      <% end %>
     </tr>
   <% end %>
 </table>
