--- a/app/views/productinfos/index.html.erb
+++ b/app/views/productinfos/index.html.erb
@@ -11,6 +11,7 @@
 
 <table>
   <tr>
+    <th></th>
     <th>Product Name</th>
     <th>Store Product Id</th>
     <th>Product Price</th>
@@ -20,10 +21,10 @@
   <% for product in @productList %>
     <tr>
       <% if current_user.admin? || product.user_id == current_user.id %>
+        <td><%= image_tag(product.image_url(:thumb).to_s) %></td>
         <td><%= product.productname %></td>
         <td><%= product.storeproductid %></td>
         <td><%= product.productprice %></td>
-        <td><%= product.image %></td>
         <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
                                 :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
         <td><%= link_to'Edit', edit_productinfo_path(product) %></td>
