--- a/app/views/storeinfos/_form.html.erb
+++ b/app/views/storeinfos/_form.html.erb
@@ -46,14 +46,17 @@
     <%= form.number_field :contactno %>
   </div>
 
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image %>
-  </div>
+    <div class="field">
+      <% if @storeinfo.storename? == true %>
+        <%= form.hidden_field :user_id, :value => @storeinfo.user_id %>
+      <% else %>
+        <%= form.hidden_field :user_id, :value => current_user.id %>
+      <% end %>
+    </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.hidden_field :user_id, :value => current_user.id %>
+    <%= form.label :image %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="actions">
