--- a/app/views/storeinfos/show.html.erb
+++ b/app/views/storeinfos/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag(@storeinfo.image_url.to_s, width: "15%") %>
+</p>
+
+<p>
   <strong>Storename:</strong>
   <%= @storeinfo.storename %>
 </p>
