--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -11,67 +11,40 @@
   <% @productList = @productSearch %>
 <% end %>
 
+</br>
+
 <table>
   <tr>
     <th></th>
     <th>Product Name</th>
   </tr>
-
-  <% for product in @productList %>
+  <% @productHash.each do |key, value| %>
     <tr>
-      <td><%= image_tag(product.image_url(:thumb).to_s) %></td>
-      <td><%= product.productname %></td>
-      <td><%= link_to'Show', {:controller => "productinfos", :action => "show",
-                              :id => product.id, :branchinfo_id => product.branchinfo_id}%></td>
-      <% if current_user != nil %>
-        <% if current_user.admin? == true || product.user_id == current_user.id  %>
-          <% storeid = Branchinfo.find(product.branchinfo_id).storeinfo_id %>
-          <td><%= link_to'Edit', {:controller => "productinfos", :action => "edit",
-                                  :id => product.id, :branchinfo_id => product.branchinfo_id, :storeinfo_id => storeid} %></td>
-          <td><%= link_to'Destroy', productinfo_path(product),
-                         :confirm =>'Are you sure?',
-                         :method => :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      <% end %>
+      <td></td>
+      <td><%= key %></td>
+      <td><%= link_to'Show', {:controller => "compare", :action => "index",
+                              :pdName => key, :pdID => value } %></td>
     </tr>
   <% end %>
 </table>
 
-  <div>
-
+<div>
   <% if current_user != nil %>
-  <% storeCreated = false %>
-  <% @storeList = Storeinfo.all %>
-  <% for store in @storeList %>
-    <% if store.user_id == current_user.id %>
-      <% storeCreated = true %>
-      <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
-      <% break %>
-    <% end %>
-  <% end %>
-
-  <% if storeCreated == false %>
-    <% if current_user.admin? %>
-      <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
-    <% else %>
-      <%= link_to 'Opened a New Store?', new_storeinfo_path %> |
-    <% end %>
-  <% end %>
-
-  <% @profileList = Profile.all %>
-  <% profilePresent = false %>
-
-    <% if current_user.admin? == false %>
-      <% for profile in @profileList %>
-        <% if profile.user_id == current_user.id %>
-          <% profilePresent = true %>
-          <%= link_to 'Update Your Profile', edit_profile_path(profile.id) %>
-          <% break %>
-        <% end %>
+    <% storeCreated = false %>
+    <% @storeList = Storeinfo.all %>
+    <% for store in @storeList %>
+      <% if store.user_id == current_user.id %>
+        <% storeCreated = true %>
+        <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+        <% break %>
       <% end %>
+    <% end %>
 
-      <% if profilePresent == false %>
-        <%= link_to 'Update Your Profile', {:controller => "profiles", :action => "new", :user_id => current_user.id} %>
+    <% if storeCreated == false %>
+      <% if current_user.admin? %>
+        <%= link_to 'Show Stores', {:controller => "storeinfos", :action => "index"} %>
+      <% else %>
+        <%= link_to 'Opened a New Store?', new_storeinfo_path %>
       <% end %>
     <% end %>
   <% end %>
