--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,23 @@
     <div>Signed in as... <%= current_user.email %>
       (<%= link_to'Sign out', destroy_user_session_path,:method => :delete%>)</div>
 
+    <% @profileList = Profile.all %>
+    <% profilePresent = false %>
+
+    <% if current_user.admin? == false %>
+      <% for profile in @profileList %>
+        <% if profile.user_id == current_user.id %>
+          <% profilePresent = true %>
+          <%= link_to 'Update Your Profile', edit_profile_path(profile.id) %>
+          <% break %>
+        <% end %>
+      <% end %>
+
+      <% if profilePresent == false %>
+        <%= link_to 'Update Your Profile', {:controller => "profiles", :action => "new", :user_id => current_user.id} %>
+      <% end %>
+    <% end %>
+
     </br>
     <%= link_to 'Home', {:controller => "home", :action => "Index" } %>
     <% else %>
