--- a/app/views/storeinfos/_form.html.erb
+++ b/app/views/storeinfos/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :phoneno %>
-    <%= form.number_field :phoneno %>
+    <%= form.text_field :phoneno %>
   </div>
 
   <div class="field">
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= form.label :branchcount %>
-    <%= form.number_field :branchcount %>
+    <%= form.number_field :branchcount, :value=>'1' %>
   </div>
 
   <div class="field">
@@ -43,7 +43,7 @@
 
   <div class="field">
     <%= form.label :contactno %>
-    <%= form.number_field :contactno %>
+    <%= form.text_field :contactno %>
   </div>
 
     <div class="field">
