--- a/app/views/compare/index.html.erb
+++ b/app/views/compare/index.html.erb
@@ -22,7 +22,7 @@
       <td><%= product.productprice.to_f %></td>
 
       <td>
-         <%= form_for @order_item do |f| %>
+         <%= form_for @order_item, remote: true do |f| %>
           <%= f.hidden_field :productinfo_id, :value => product.id %>
           <%= f.number_field :quantity, :value => 1, :min => 1 %>
           <%= f.submit "Add to Cart" %>
@@ -33,4 +33,6 @@
 </table>
 
 <%= link_to 'Back', {:controller => "home", :action => "Index"} %>
-<%= link_to "#{current_order.order_items.size} items with a value of #{current_order.subtotal} EUR", carts_show_path %>
+<div id="cart">
+  <%= render 'carts/cart' %>
+</div>
